--- a/.tools/test/config/targets.yaml
+++ b/.tools/test/config/targets.yaml
@@ -3,34 +3,34 @@ cpp:
   status: "enabled"
 dotnetv3:
   account_id: "441997275833"
-  status: "enabled"
+  status: "disabled"
 gov2:
   account_id: "234521034040"
-  status: "enabled"
+  status: "disabled"
 javascriptv3:
   account_id: "875008041426"
-  status: "enabled"
+  status: "disabled"
 javav2:
   account_id: "667348412466" # back-up "814548047983"
-  status: "enabled"
+  status: "disabled"
 kotlin:
   account_id: "471951630130" # back-up "814548047983"
-  status: "enabled"
+  status: "disabled"
 php:
   account_id: "733931915187"
-  status: "enabled"
+  status: "disabled"
 python:
   account_id: "664857444588"
-  status: "enabled"
+  status: "disabled"
 ruby:
   account_id: "616362385685"
-  status: "enabled"
+  status: "disabled"
 rustv1:
   account_id: "050288538048"
-  status: "enabled"
+  status: "disabled"
 sap-abap:
   account_id: "099736152523"
   status: "disabled"
 swift:
   account_id: "637397754108"
-  status: "enabled"
+  status: "disabled"
