--- a/cpp/example_code/acm/CMakeLists.txt
+++ b/cpp/example_code/acm/CMakeLists.txt
@@ -4,103 +4,64 @@
 # Set the minimum required version of CMake for this project.
 cmake_minimum_required(VERSION 3.13)
 
+set(SERVICE_NAME acm)
+set(SERVICE_COMPONENTS acm)
+
 # Set this project's name.
-project("acm-examples")
+project("${SERVICE_NAME}-examples")
+
+# Build shared libraries by default.
+set(BUILD_SHARED_LIBS ON)
 
 # Set the C++ standard to use to build this target.
 set(CMAKE_CXX_STANDARD 11)
 
-# Enable CTest for testing these code examples.
-include(CTest)
+# Use the MSVC variable to determine if this is a Windows build.
+set(WINDOWS_BUILD ${MSVC})
 
-# Build shared libraries by default.
-if(NOT BUILD_SHARED_LIBS)
-    set(BUILD_SHARED_LIBS ON)
-endif()
+# Set the location of where Windows can find the installed libraries of the SDK.
+if (WINDOWS_BUILD)
+    string(REPLACE ";" "/aws-cpp-sdk-all;" SYSTEM_MODULE_PATH "${CMAKE_SYSTEM_PREFIX_PATH}/aws-cpp-sdk-all")
+    list(APPEND CMAKE_PREFIX_PATH ${SYSTEM_MODULE_PATH})
+endif ()
 
 # Find the AWS SDK for C++ package.
-find_package(AWSSDK REQUIRED COMPONENTS acm)
+find_package(AWSSDK REQUIRED COMPONENTS ${SERVICE_COMPONENTS})
 
-# If the compiler is some version of Microsoft Visual C++, or another compiler simulating C++, 
-# and the compiler is building shared libraries, then dynamically link to those shared libraries.
-if(MSVC AND BUILD_SHARED_LIBS)
-    add_definitions(-DUSE_IMPORT_EXPORT)
+
+if (WINDOWS_BUILD)
     # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
-    list(APPEND SERVICE_LIST acm)
-    AWSSDK_CPY_DYN_LIBS(SERVICE_LIST "" ${CMAKE_CURRENT_BINARY_DIR})
-endif()
 
-# Add the code example-specific header files.
-file(GLOB AWSDOC_ACM_HEADERS
-    "include/awsdoc/acm/*.h"
-)
+    # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
+    # and set the proper subdirectory to the executables' location.
 
-# Add the code example-specific source files.
-file(GLOB AWSDOC_ACM_SOURCE
-    "*.cpp"
-)
+    AWSSDK_CPY_DYN_LIBS(SERVICE_COMPONENTS "" ${CMAKE_CURRENT_BINARY_DIR} ${BIN_SUB_DIR})
+endif ()
 
-# Check whether the target system is Windows, including Win64.
-if(WIN32)
-    # Check whether the compiler is some version of Microsoft Visual C++, or another compiler simulating C++.
-    if(MSVC)
-        source_group("Header Files\\awsdoc\\acm" FILES ${AWSDOC_ACM_HEADERS})
-        source_group("Source Files" FILES ${AWSDOC_ACM_SOURCE})
-    endif(MSVC)
-endif()
 
-foreach(file ${AWSDOC_ACM_SOURCE})
+# AWSDOC_SOURCE can be defined in the command line to limit the files in a build. For example,
+# you can limit files to one action.
+if (NOT DEFINED AWSDOC_SOURCE)
+    file(GLOB AWSDOC_SOURCE
+            "*.cpp"
+    )
+endif ()
+
+foreach (file ${AWSDOC_SOURCE})
     get_filename_component(EXAMPLE ${file} NAME_WE)
 
     # Build the code example executables.
     set(EXAMPLE_EXE run_${EXAMPLE})
 
-    add_executable(${EXAMPLE_EXE} ${AWSDOC_ACM_HEADERS} ${file})
+    add_executable(${EXAMPLE_EXE} ${file})
 
-    if(MSVC AND BUILD_SHARED_LIBS)
-        target_compile_definitions(${EXAMPLE_EXE} PUBLIC "USE_IMPORT_EXPORT")
-        target_compile_definitions(${EXAMPLE_EXE} PRIVATE "AWSDOC_ACM_EXPORTS")
-    endif()
-
-    target_include_directories(${EXAMPLE_EXE} PUBLIC 
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-        $<INSTALL_INTERFACE:include>)
-    target_link_libraries(${EXAMPLE_EXE} ${AWSSDK_LINK_LIBRARIES} 
-        ${AWSSDK_PLATFORM_DEPS})
-
-    if(BUILD_TESTING)
-        # Enable testing for this directory and below.
-        enable_testing()
-
-        # Build the code example libraries.
-        set(EXAMPLE_LIB ${EXAMPLE})
-
-        add_library(${EXAMPLE_LIB} ${AWSDOC_ACM_HEADERS} ${file} )
-
-        if(MSVC AND BUILD_SHARED_LIBS)
-            target_compile_definitions(${EXAMPLE_LIB} PUBLIC "USE_IMPORT_EXPORT")
-            target_compile_definitions(${EXAMPLE_LIB} PRIVATE "AWSDOC_ACM_EXPORTS")
-        endif()
-
-        target_include_directories(${EXAMPLE_LIB} PUBLIC
-            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-            $<INSTALL_INTERFACE:include>)
-        target_link_libraries(${EXAMPLE_LIB} ${AWSSDK_LINK_LIBRARIES} 
+    target_link_libraries(${EXAMPLE_EXE} ${AWSSDK_LINK_LIBRARIES}
             ${AWSSDK_PLATFORM_DEPS})
 
-        # Build the code example unit tests.
-        set(EXAMPLE_TEST test_${EXAMPLE})
-        set(EXAMPLE_TEST_FILE ${CMAKE_CURRENT_SOURCE_DIR}/tests/test_${EXAMPLE}.cpp)
+endforeach ()
 
-        if(EXISTS ${EXAMPLE_TEST_FILE})
-            add_executable(${EXAMPLE_TEST} ${EXAMPLE_TEST_FILE} )
 
-            target_include_directories(${EXAMPLE_TEST} PUBLIC
-                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-                $<INSTALL_INTERFACE:include>)
-            target_link_libraries(${EXAMPLE_TEST} ${EXAMPLE_LIB} )
-            add_test(${EXAMPLE_TEST} ${EXAMPLE_TEST})
-        endif()
+if (BUILD_TESTS)
+    add_subdirectory(tests)
+endif ()
 
-    endif()
-endforeach()
